Fixed menu + header (da terminare jumbotron)

--- a/index.html
+++ b/index.html
@@ -7,9 +7,63 @@
   </head>
   <body>
     <!-- inizio menu fixed-->
-    <nav>
-    </nav>
-    <!-- fine menu fixed-->
+    <header>
+      <div class="menu_fixed_container">
+        <div class="menu_fixed">
+          <div class="left_menu">
+            <nav>
+              <ul class="list">
+                <li><a href="#">English</a></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="right_menu">
+            <nav>
+             <ul class="list">
+               <li><a href="#">Lente d'ingrandimento</a></li> <!--lente d'ingrandimento-->
+               <li><a class="btn_white" href="#">Login</a></li>
+               <li><a class="btn" href="#">GetHubSpotFree</a></li>
+             </ul>
+            </nav>
+          </div>
+      </div>
+     <!-- fine menu fixed-->
+     <!-- inizio menu_container (menu_home + jumbotron)-->
+      </div>
+      <div class="menu_container">
+        <div class="menu_home">
+          <div class="header_logo">
+            <img src="img/logo.svg" alt="Logo HubSpot">
+          </div>
+          <div class="header_menu">
+             <nav>
+               <ul class="list"=>
+                 <li><a class="arrow" href="#">Software</a></li>
+                 <li><a href="#">Pricing</a></li>
+                 <li><a href="#">Resources</a></li>
+                 <li><a href="#">Partners</a></li>
+                 <li><a href="#">About</a></li>
+               </ul>
+             </nav>
+          </div>
+        </div>
+        <!-- fine menu home-->
+        <!-- inzio jumbotron-->
+        <div class="jumbotron">
+          <div class="jumbotron_text">
+            <h1>There's a better way to growth.</h1>
+            <p>Marketing, sales and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the costumer".</p>
+            <a class="btn" href="#">GetHubSpotFree</a>
+            <p>Get started with FREE tools, and upgrade as you grow.</p>
+          </div>
+        </div>
+      </div>
+      <!-- fine jumbotron-->
+      <!-- fine menu_container (menu_home + jumbotron)-->
+    </header>
+    <!-- fine header-->
+    <br>
     <!-- inizio footer-->
     <footer>
       <div class="">
@@ -155,7 +209,7 @@
       <div class="">
         <!-- credits -->
       </div>
-      
+
     </footer>
     <!-- fine footer -->
 
