creazione section "references"

--- a/index.html
+++ b/index.html
@@ -192,8 +192,36 @@
     </section>
     <!-- fine learn&growth-->
     <!-- inizio references-->
-
-
+    <section>
+      <div class="references_container clearfix">
+        <div class="references_main">
+          <div class="text">
+            <h2>64,500</h2>
+            <ul>
+              <li>customers in over <span>100</span></li>
+              <li>countries growing their</li>
+              <li>businesses with HubSpot</li>
+            </ul>
+          </div>
+          <div class="logos">
+            <div class="logo_1"><img class="img_logo" src="https://f.hubspotusercontent00.net/hubfs/53/1200px-WWF_logo_svg%20(1).png"></div>
+            <div class="logo_2"><img class="img_logo" src="https://f.hubspotusercontent00.net/hubfs/53/trello-logo-blue%20(1).png"></div>
+            <div class="logo_3"><img class="img_logo" src="https://f.hubspotusercontent00.net/hubfs/53/1200px-G2_Crowd_logo.svg.png"></div>
+            <div class="logo_4"><img class="img_logo" src="https://www.hubspot.com/hubfs/assets/hubspot.com/homepage/Vertical_Sabaeus_RGB.svg"></div>
+            <div class="logo_5"><img class="img_logo" src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Subaru_Logo_v2_186x63@2x.png"></div>
+            <div class="logo_6"><img class="img_logo" src="https://f.hubspotusercontent00.net/hubfs/53/soundcloud.png"></div>
+            <div class="logo_7"><img class="img_logo" src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png"></div>
+            <div class="logo_8"><img class="img_logo" src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png"></div>
+          </div>
+          <div class="button">
+            <h2>Start Growing With HubSpot Today</h2>
+            <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+            <a class="btn" href="#">GetHubSpotFree</a>
+            <p>Get started with FREE tools, or get mre with our premium software.</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- fine references-->
 
     <!-- fine main-->
@@ -203,6 +231,13 @@
       <div class="">
         <!-- div container-->
         <nav>
+          <ul>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+          </ul>
           <!-- menu di navigazione-->
         </nav>
         <div class="">
