--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>HubSpor Inbound Marketing, Sales and Service Software</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>HubSpot Inbound Marketing, Sales and Service Software</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d65faad3b8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
@@ -15,7 +15,7 @@
           <div class="left_menu">
             <nav>
               <ul class="list">
-                <li><a  class="a_normal" href="#"><span class="glyphicon glyphicon-globe"></span>English</a><i class="arrow down"></i></li>
+                <li><a  class="a_normal" href="#"><i class="fas fa-globe-europe"></i>English</a><i class="arrow down"></i></li>
                 <li><a class="a_normal" href="#">Contact Us</a></li>
               </ul>
             </nav>
@@ -23,7 +23,7 @@
           <div class="right_menu">
             <nav>
              <ul class="list">
-               <li><a href="#">Lente d'ingrandimento</a></li> <!--lente d'ingrandimento-->
+               <li><a href="#"><i class="fas fa-search"></i></a></li>
                <li><a class="btn_white" href="#">Login</a></li>
                <li><a class="btn" href="#">GetHubSpotFree</a></li>
              </ul>
@@ -127,7 +127,7 @@
           <div class="fourth_col col">
             <img class="col_img" src="img/profile.svg" alt="">
             <h3>Service Hub</h3>
-            <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
+            <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters.</p>
             <hr>
             <p class="popular">popular feature</p>
             <ul class="list_col">
@@ -190,11 +190,8 @@
             <h2>5K+</h2>
             <p>profiles and counting</p>
           </div>
-
         </div>
-
       </div>
-
     </section>
     <!-- fine learn&growth-->
     <!-- inizio references-->
