--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>HubSpot Inbound Marketing, Sales and Service Software</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d65faad3b8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/master.css">
   </head>
@@ -15,7 +14,7 @@
           <div class="left_menu">
             <nav>
               <ul class="list">
-                <li><a  class="a_normal" href="#"><i class="fas fa-globe-europe"></i>English</a><i class="arrow down"></i></li>
+                <li><a  class="a_normal" href="#"><i  id="globe" class="fas fa-globe-europe"></i>English</a><i class="arrow down"></i></li>
                 <li><a class="a_normal" href="#">Contact Us</a></li>
               </ul>
             </nav>
